<resources>
    <string name="app_name">PeliculasAppMoviles</string>
    <string name="user">User</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="register">Sigin Up</string>
    <string name="name">Name</string>
    <string name="lastname">Last Name</string>
    <string name="age">Age</string>
    <string name="PopayanCinema">Popayan Cinema</string>
    <string name="Welcome">Welcome to Register</string>
    <string name="Login">Login</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="Premieres">Premiers</string>
    <string name="NextRelease">Next Releases</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logan">Logan</string>
    <string name="duration">Duration:</string>
    <string name="type">Type:</string>
    <string name="Minutes">Minutes</string>
    <string name="action">Action</string>
    <string name="fiction">Fiction</string>
    <string name="remember">Remember</string>

    <string name="drama">Drama</string>
    <string name="sciencefiction">Science Fiction</string>
    <string name="Thriller">Thriller</string>
    <string name="Terror">Terror</string>
    <string name="fantasy">Fantasy</string>
    <string name="Anime">Anime</string>
    <string name="animation">Animation</string>
    <string name="Supernatural">Super Natural</string>
    <string name="comedy">Comedy</string>
    <string name="biography">Biography</string>
    <string name="title_activity_estrenos_fragment">Premiers Fragment</string>
    <string name="title_activity_proximos_estrenos_fragment">Next Releases Fragment</string>
    <string name="title_activity_tabbed_ativity">Tabbed Ativity</string>
    <string name="tittlemovie">Movie Tittle</string>
    <string name="genero2">Genre 2</string>
    <string name="genero1">Genre 1</string>
    <string name="Genero3">Genre 3</string>
    <string name="minutos">Minutes</string>
    <string name="peliculas">Movies</string>
    <string name="calificarpeliculas">Rate Movies</string>
    <string name="recordar">Remember</string>
    <string name="horarios">Schedules</string>
    <string name="mejorescalificadas">Top Rated</string>
    <string name="precios">Prices</string>
    <string name="salir">Exit</string>
    <string name="profile">Profile</string>
    <string name="open">Open Menu</string>
    <string name="close">Close Menu</string>
    <string name="numberminutes">000</string>
</resources>
