<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item android:id="@+id/nav_peliculas" android:title="@string/peliculas" android:icon="@drawable/ic_peliculas"/>
    <item android:id="@+id/nav_calificarpeliculas" android:title="@string/calificarpeliculas" android:icon="@drawable/ic_calificar_peliculas"/>
    <item android:id="@+id/nav_horarios" android:title="@string/horarios" android:icon="@drawable/ic_horarios"/>
    <item android:id="@+id/nav_mejorescalificadas" android:title="@string/mejorescalificadas" android:icon="@drawable/ic_mejores_calificadas"/>
    <item android:id="@+id/nav_precios" android:title="@string/precios" android:icon="@drawable/ic_precios"/>


    <item android:title="@string/profile">
        <menu>
            <item android:id="@+id/nav_salir" android:title="@string/salir" android:icon="@drawable/ic_salir"/>
        </menu>
    </item>




</menu>